# ng-log

./: .gitignore  BUILD.bazel  CMakeLists.txt  LICENSE.md  MODULE.bazel  README.rst  codecov.yml  gcovr.cfg  glog-config.cmake.in  libng-log.pc.in  mkdocs.yml  ng-log-config.cmake.in  ng-log-modules.cmake.in  versions.json
0.8.0/: 404.html  index.html  sitemap.xml
0.8.1/: 404.html  index.html  sitemap.xml
0.8.2/: 404.html  index.html  sitemap.xml
0.8.3/: 404.html  build.md.orig  index.html  search.json  sitemap.xml  usage.md.orig
0.9.0/: 404.html  build.md.orig  index.html  release_notes.md.orig  search.json  sitemap.xml  usage.md.orig
bazel/: ng-log.bzl
cmake/: FindLibbacktrace.cmake  RunCleanerTest1.cmake  RunCleanerTest4.cmake  TestPackageConfig.cmake  mingw-w64-wine.cmake
docs/: build.md  contribute.md  failures.md  flags.md  index.md  log_cleaner.md  log_stripping.md  logging.md  migration-from-glog.md  packages.md  release_notes.md  requirements.txt  sinks.md  unwinder.md  usage.md  windows.md
examples/: custom_sink.cc
src/: addr2line.cc  addr2line.h  addr2line_fake_empty.cc  addr2line_fake_functions.cc  addr2line_fake_hang.cc  addr2line_fake_slow.cc  addr2line_unittest.cc  cleanup_immediately_unittest.cc  cleanup_multi_level_immediately_unittest.cc  config.h.cmake.in  flags.cc  (+47 more)
src/includes_unittest/: CMakeLists.txt  ng-log_includes_logging.cc  ng-log_includes_raw_logging.cc  ng-log_includes_stl_logging.cc  ng-log_includes_vlog_is_on.cc
src/log_severity_unittest/: CMakeLists.txt  ng-log_log_severity_constants.cc  ng-log_log_severity_conversion.cc
(+102 files in other folders)
